fix(styles): fixing 100vh glitch on mobile devices

--- a/src/styles/components/game.sass
+++ b/src/styles/components/game.sass
@@ -2,5 +2,11 @@
 @use "../utils/mixins" as mix
 
 .game
+  position: absolute
+  top: 0
+  right: 0
+  bottom: 0
+  left: 0
   width: 100%
+  height: 100%
   @include mix.flex(row nowrap, flex-start, stretch)
