--- a/src/styles/components/info-screen.sass
+++ b/src/styles/components/info-screen.sass
@@ -5,7 +5,8 @@
   $this: &
   margin: 0
   padding: 0
-  height: 100vh
+  height: 100%
+  max-height: 100%
   @include mix.flex(row nowrap)
   flex: 1 0 100%
   box-sizing: border-box
