--- a/src/styles/components/progress-bar.sass
+++ b/src/styles/components/progress-bar.sass
@@ -4,7 +4,8 @@
 .progress-bar
   z-index: 5
   position: relative
-  height: 100vh
+  height: 100%
+  max-height: 100%
   max-width: 376px
   @include mix.flex(column wrap, center, stretch)
   flex: 1 0 100%
