--- a/src/styles/components/quiz-frame.sass
+++ b/src/styles/components/quiz-frame.sass
@@ -3,7 +3,8 @@
 
 .quiz-frame
   position: relative
-  height: 100vh
+  height: 100%
+  max-height: 100%
   @include mix.flex(column wrap, center, stretch)
   flex: 1 1 auto
   background-color: var.$black-5
